--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
   </header>
   
-<img class="pics" src="/IMG-20230723-WA0013.jpg" alt="paul pics">
+<img class="pics" src="/IMG-20230723-WA0013.jpg" alt="paul pic"/>
 <h2 class="assist">What would you have me do for you?</h2>
 
 <main>
